generate/mvDeviceManager/Include/mvDeviceManager.h

/// \brief A type for handles bound to an object list.
typedef int HLIST;
/// \brief A type for handles bound to an unspecified object.
typedef int HOBJ;
	//-----------------------------------------------------------------------------
	/// \brief Valid string query types.
	///
	/// Certain information for an object can be queried as a string with direct 
	/// construction.
	enum TOBJ_StringQuery // no_managed_type
	//-----------------------------------------------------------------------------
	{
		/// \brief The name of the object referenced by HOBJ.
		sqObjName				= 0,
		/// \brief The documentation string of the object referenced by HOBJ.
		sqObjDocString			= 1,
		/// \brief The content descriptor of the object referenced by HOBJ.
		///
		/// \note
		/// This value is only defined if the referenced object is of type <b>TComponentType::ctList</b>.
		sqListContentDescriptor	= 2,
		/// \brief The value of the object referenced by HOBJ.
		///
		/// \note
		/// This value is only defined if the referenced object is of type <b>TComponentType::ctProp</b>.
		sqPropVal				= 3,
		/// \brief The format string of the object referenced by HOBJ.
		///
		/// \note
		/// This value is only defined if the referenced object is of type <b>TComponentType::ctProp</b>.
		sqPropFormatString		= 4,
		/// \brief The parameter list of the object referenced by HOBJ.
		///
		/// \note
		/// This value is only defined if the referenced object is of type <b>TComponentType::ctMeth</b>.
		///
		/// The returned string will contain characters giving information about the parameters expected by
		/// the method object.
		///
		/// The characters have the following meaning:
		/// - i specifies an integer value
		/// - s specifies a pointer to a C-string
		/// - f specifies a float value
		/// - v specifies a void return value
		///
		/// Examples:
		///
		/// - 'v': This is a function returning nothing (void). It expects no parameters.
		/// - 'viis': This is a function returning nothing (void). It expects 2 integer values
		/// and one pointer to a C-string.
		/// - 'if': This function returns an integer value and expects a float value.
		sqMethParamString		= 5,
		/// \brief The display name of the object referenced by HOBJ.
		sqObjDisplayName		= 6
	};
		typedef enum TOBJ_StringQuery TOBJ_StringQuery;
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetI( HOBJ hProp, int* pVal, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetIArray( HOBJ hProp, int* pVal, unsigned int valCount, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetI( HOBJ hProp, int val, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetIArray( HOBJ hProp, const int* pVal, unsigned int valCount, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetIDictEntry( HOBJ hProp, char* pTranslationString, size_t translationStringBufSize, int* pValue, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetIDictEntries( HOBJ hObj, char** pTranslationArray, size_t sizePerTranslationBuf, int* pValArray, size_t arraySizes );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetI64( HOBJ hProp, int64_type* pVal, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetI64Array( HOBJ hProp, int64_type* pVal, unsigned int valCount, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetI64( HOBJ hProp, int64_type val, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetI64Array( HOBJ hProp, const int64_type* pVal, unsigned int valCount, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetI64DictEntry( HOBJ hProp, char* pTranslationString, size_t translationStringBufSize, int64_type* pValue, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetI64DictEntries( HOBJ hObj, char** pTranslationArray, size_t sizePerTranslationBuf, int64_type* pValArray, size_t arraySizes );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetP( HOBJ hProp, void** pVal, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetP( HOBJ hProp, void* val, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetS( HOBJ hProp, char* pVal, size_t bufSize, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetS( HOBJ hProp, const char* pVal, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetSFormattedEx( HOBJ hProp, char* pBuf, size_t* pBufSize, const char* pFormat, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetSArrayFormattedEx( HOBJ hProp, char* pBuf, size_t* pBufSize, const char* pFormat, const char* pDelimiters, int startIndex, int endIndex, int mode );
	TPROPHANDLING_ERROR DMR_CALL OBJ_RemoveVal( HOBJ hProp, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_IsConstantDefined( HOBJ hProp, int constant, unsigned int* pResult );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetDictSize( HOBJ hProp, unsigned int* pDictSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetFormatString( HOBJ hProp, char* pBuf, size_t bufSize );
	// list specific object functions
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetElementCount( HLIST hList, unsigned int* pElementCount );
	// method specific object functions
	TPROPHANDLING_ERROR DMR_CALL OBJ_Execute( HOBJ hMeth, const char* pCallParams, const char* pDelimiters, int* pResult );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetSParamList( HOBJ hMeth, char* pBuf, size_t bufSize );
	// advanced object specific functions
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetHandleEx( HLIST hList, const char* pObjName, HOBJ* phObj, unsigned int searchmode, int maxSearchDepth );
	/// \brief A prototype for a function pointer used for in place string construction
	///
	/// This function pointer can be used to prototype advanced efficient calls to interface functions.
	/// \sa
	/// <b>OBJ_GetSWithInplaceConstruction()</b>
	typedef char*(SCF)(const char* pBuf, size_t bufSize);
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetSWithInplaceConstruction( HOBJ hObj, TOBJ_StringQuery sq, char** pResult, SCF constructionFunc, int mode, int reserved );
	TPROPHANDLING_ERROR DMR_CALL OBJ_FreeSMemory( char* pBuffer );