_mvDeviceManager.pxd


    TPROPHANDLING_ERROR OBJ_GetI(HOBJ hProp, int *pVal, int index)

    TPROPHANDLING_ERROR OBJ_GetIArray(HOBJ hProp, int *pVal, unsigned int valCount, int index)

    TPROPHANDLING_ERROR OBJ_SetI(HOBJ hProp, int val, int index)

    TPROPHANDLING_ERROR OBJ_SetIArray(HOBJ hProp, const int *pVal, unsigned int valCount, int index)

    TPROPHANDLING_ERROR OBJ_GetIDictEntry(HOBJ hProp, char *pTranslationString, size_t translationStringBufSize, int *pValue, int index)

    TPROPHANDLING_ERROR OBJ_GetIDictEntries(HOBJ hObj, char **pTranslationArray, size_t sizePerTranslationBuf, int *pValArray, size_t arraySizes)

    TPROPHANDLING_ERROR OBJ_GetI64(HOBJ hProp, int64_type *pVal, int index)

    TPROPHANDLING_ERROR OBJ_GetI64Array(HOBJ hProp, int64_type *pVal, unsigned int valCount, int index)

    TPROPHANDLING_ERROR OBJ_SetI64(HOBJ hProp, int64_type val, int index)

    TPROPHANDLING_ERROR OBJ_SetI64Array(HOBJ hProp, const int64_type *pVal, unsigned int valCount, int index)

    TPROPHANDLING_ERROR OBJ_GetI64DictEntry(HOBJ hProp, char *pTranslationString, size_t translationStringBufSize, int64_type *pValue, int index)

    TPROPHANDLING_ERROR OBJ_GetI64DictEntries(HOBJ hObj, char **pTranslationArray, size_t sizePerTranslationBuf, int64_type *pValArray, size_t arraySizes)

    TPROPHANDLING_ERROR OBJ_GetP(HOBJ hProp, void **pVal, int index)

    TPROPHANDLING_ERROR OBJ_SetP(HOBJ hProp, void *val, int index)

    TPROPHANDLING_ERROR OBJ_GetS(HOBJ hProp, char *pVal, size_t bufSize, int index)

    TPROPHANDLING_ERROR OBJ_SetS(HOBJ hProp, const char *pVal, int index)

    TPROPHANDLING_ERROR OBJ_GetSFormattedEx(HOBJ hProp, char *pBuf, size_t *pBufSize, const char *pFormat, int index)

    TPROPHANDLING_ERROR OBJ_GetSArrayFormattedEx(HOBJ hProp, char *pBuf, size_t *pBufSize, const char *pFormat, const char *pDelimiters, int startIndex, int endIndex, int mode)

    TPROPHANDLING_ERROR OBJ_RemoveVal(HOBJ hProp, int index)

    TPROPHANDLING_ERROR OBJ_IsConstantDefined(HOBJ hProp, int constant, unsigned int *pResult)

    TPROPHANDLING_ERROR OBJ_GetDictSize(HOBJ hProp, unsigned int *pDictSize)

    TPROPHANDLING_ERROR OBJ_GetFormatString(HOBJ hProp, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_GetElementCount(HLIST hList, unsigned int *pElementCount)

    TPROPHANDLING_ERROR OBJ_Execute(HOBJ hMeth, const char *pCallParams, const char *pDelimiters, int *pResult)

    TPROPHANDLING_ERROR OBJ_GetSParamList(HOBJ hMeth, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_GetHandleEx(HLIST hList, const char *pObjName, HOBJ *phObj, unsigned int searchmode, int maxSearchDepth)

    ctypedef char * (*SCF)(const char *, size_t) #FIXME: should be ...(const char*, size_t)

    TPROPHANDLING_ERROR OBJ_GetSWithInplaceConstruction(HOBJ hObj, TOBJ_StringQuery sq, char **pResult, SCF constructionFunc, int mode, int reserved)

    TPROPHANDLING_ERROR OBJ_FreeSMemory(char *pBuffer)


